apps/eg-custom-resources/httproute-healthz.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eg-healthz
spec:
  parentRefs:
    - name: eg
      sectionName: http
  rules:
    - matches:
        - path:
            type: Exact
            value: /healthz
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: eg-healthz
